--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,10 +2,9 @@ name: Call reusable workflow from Scripts repo
 
 on:
   push:
-    branches:
-      - "**"
+    branches: [main]
   pull_request:
-    types: [labeled]
+    types: [push, labeled]
 
 jobs:
   call-reusable-workflow:
@@ -14,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: california-energy-commission/scripts@main
         with:
-          github-ref: ${{ github.ref }}
+          github-ref: ${GITHUB_REF##*/}
           repository-name: ${{ github.event.repository.name }}
           access-token: ${{ secrets.CROSS_REPO_ACCESS_TOKEN }}
           version: ${{ github.event.label.name }}
